# LED-Dodecahedron

./: README.md
Firmware/LED-Dodecahedron/: CMakeLists.txt
Firmware/LED-Dodecahedron/main/: CMakeLists.txt  idf_component.yml  main.c
Firmware/LED-Dodecahedron/main/LED_Panels/: led_panels.c  led_panels.h
Firmware/LED-Dodecahedron/main/Network/: app_index.html  http_server.c  http_server.h  network.c
Firmware/LED-Dodecahedron/main/Power/: fuel_gauge.c  fuel_gauge.h  power.c  power.h  power_meter.c  power_meter.h
Firmware/LED-Dodecahedron/main/Temperature/: temperature_sensor.c  temperature_sensor.h
Firmware/LED-Dodecahedron/main/effects/: rainbow.c  solid_color.c  solid_color.h
KiCad/LEDSphere/: LEDSphere.kicad_pcb  LEDSphere.kicad_prl  LEDSphere.kicad_pro  LEDSphere.kicad_sch  LEDSphere_symbols.kicad_sym  LEDs.kicad_sch  SpherePower.kicad_sch  fp-lib-table  sym-lib-table
KiCad/LEDSphere/LEDSphere_footprints.pretty/: 1769.kicad_mod  BOSCH_LGA-12.kicad_mod  NMOS_SOT91P240X110-3N.kicad_mod  SOT96P240X110-3N.kicad_mod  SSM3J332RLFT.kicad_mod  WS2812-W-MINI.kicad_mod  audioAmp_QFN50P300X300X80-17N.kicad_mod  batteryChg_SON50P300X300X100-11N-D.kicad_mod  boostInductor_XFL4020.kicad_mod  boost_SON50P300X300X100-11N-D.kicad_mod  button_B3U-1000P.kicad_mod  button_KMR_2.kicad_mod  cp2102_QFN50P500X500X80-29N-D.kicad_mod  fuel_SON50P200X200X80-9N-D.kicad_mod  linearReg_SON65P300X300X63-9N.kicad_mod  molexConn_874370343.kicad_mod  powerMeter_SOT65P280X110-8N.kicad_mod  shunt_LVK12R020DER.kicad_mod  speakerPads.kicad_mod  sphereESP32C3MINI1H4.kicad_mod  (+2 more)
(+17 files in other folders)
